tail-extend/tests/ui/unnamed_fields.rs
use tail_extend::make_dst_builder;

#[make_dst_builder]
struct UnnamedFields(i32, str);

fn main() {
}
